Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-511

[Python] List[T] conversions not implemented for single arrays

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.2.0
    • Python
    • None

    Description

      It works for tables, though

      In [2]: import pyarrow as pa
      
      In [3]: arr = pa.from_pylist([[1,2,3], None, [1, 2], [], [4]])
      
      In [4]: arr.to_pandas()
      ---------------------------------------------------------------------------
      ArrowException                            Traceback (most recent call last)
      <ipython-input-4-fb16f53a4747> in <module>()
      ----> 1 arr.to_pandas()
      
      /home/wesm/code/arrow/python/pyarrow/array.pyx in pyarrow.array.Array.to_pandas (/home/wesm/code/arrow/python/build/temp.linux-x86_64-3.5/array.cxx:4271)()
      
      /home/wesm/code/arrow/python/pyarrow/error.pyx in pyarrow.error.check_status (/home/wesm/code/arrow/python/build/temp.linux-x86_64-3.5/error.cxx:1197)()
      
      ArrowException: NotImplemented: Arrow type reading not implemented for list<item: int64>
      

      Attachments

        Activity

          People

            uwe Uwe Korn
            wesm Wes McKinney
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: