ARROW-511: Python: Implement List conversions for single arrays

Author: Uwe L. Korn <uwelk@xhochy.com>

Closes #320 from xhochy/ARROW-511 and squashes the following commits:

2ff63f9 [Uwe L. Korn] Use _check_pandas_roundtrip
6c8fa6d [Uwe L. Korn] Python: Implement List conversions for single arrays